--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>（￣︶￣）↗　\ SORA! /</title>
 </head>
 <body>
-	
+	<img src="./img/face.jpg"/>
 </body>
 </html>
