更改了首页样式

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 	<title>（￣︶￣）↗　\ SORA! /</title>
 </head>
 <body>
-	<img src="./img/face.jpg"/>
+	<div style='font-family: -apple-system, blinkmacsystemfont, "segoe ui", roboto, "oxygen-sans", ubuntu, cantarell, "helvetica neue", helvetica, arial, sans-serif;'>
+		（￣︶￣）↗　\ SORA! /
+	</div>
+	<div>
+		<a href="./aboutme.html"></a>
+	</div>
+	<div>
+		<img style="max-width: 100%; overflow: hidden;" src="./img/face.jpg"/>
+	</div>
 </body>
 </html>
