--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>（￣︶￣）<img draggable="false" role="img" class="emoji" alt="↗" src="https://s.w.org/images/core/emoji/13.1.0/svg/2197.svg">　\ SORA! /</title>
+	<title>（￣︶￣）↗　\ SORA! / </title>
 </head>
 <body>
-	<div style='font-family: -apple-system, blinkmacsystemfont, "segoe ui", roboto, "oxygen-sans", ubuntu, cantarell, "helvetica neue", helvetica, arial, sans-serif;'>
-		（￣︶￣）<img draggable="false" role="img" class="emoji" alt="↗" src="https://s.w.org/images/core/emoji/13.1.0/svg/2197.svg">　\ SORA! /
-	</div>
 	<div>
 		<a href="./aboutme.html"></a>
 	</div>
