--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div>
-		<a href="./aboutme.html"></a>
+		<a href="./aboutme.html">About me</a>
 	</div>
 	<div>
 		<img style="max-width: 100%; overflow: hidden;" src="./img/face.jpg"/>
